--- a/index.html
+++ b/index.html
@@ -1,44 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Bingo da Tabela Periódica</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <header>
     <h1>🎯 Bingo da Tabela Periódica</h1>
-    <p>Descubra os elementos e aprenda enquanto joga!</p>
+    <p>Jogo didático — sorteie elementos e acompanhe na tabela.</p>
   </header>
 
   <main>
-    <section id="painel-controle">
-      <button onclick="sortearElemento()">🎲 Sortear Elemento</button>
+    <section class="controls">
+      <div class="left">
+        <button id="btnSortear">🎲 Sortear elemento</button>
+        <button id="btnAuto">▶️ Iniciar automático</button>
+        <button id="btnParar">⏸️ Parar automático</button>
+        <button id="btnReiniciar">🔄 Reiniciar</button>
+      </div>
+      <div class="right">
+        <button id="btnGerarCartela">🧾 Gerar cartela 5×5</button>
+      </div>
     </section>
 
     <section id="display-sorteio">
-      <div id="sorteado" class="display">
-        <p>Nenhum elemento sorteado ainda</p>
+      <div id="lastDrawn" class="display">
+        <p id="sorteioText">Nenhum elemento sorteado ainda</p>
       </div>
     </section>
 
     <section id="historico-container">
-      <h2>Elementos Sorteados</h2>
-      <div id="historico"></div>
+      <h2>Elementos sorteados</h2>
+      <div id="drawnGrid" class="drawn-grid"></div>
     </section>
 
     <section id="tabela-periodica-container">
       <h2>Tabela Periódica</h2>
-      <div id="tabela"></div>
+      <div id="tabela" class="tabela"></div>
+
+      <div id="lanthanides-row" class="f-block-row">
+        <div class="f-label">Lantanídeos</div>
+        <div id="lanthanides" class="f-row"></div>
+      </div>
+
+      <div id="actinides-row" class="f-block-row">
+        <div class="f-label">Actinídeos</div>
+        <div id="actinides" class="f-row"></div>
+      </div>
+    </section>
+
+    <section id="cartela-area">
+      <h2>Sua Cartela</h2>
+      <div id="cartela" class="cartela"></div>
     </section>
   </main>
 
   <footer>
-    <p>Desenvolvido como recurso didático de Química 🧪</p>
+    <small>Desenvolvido como recurso didático — adapte em sala de aula.</small>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
